# curve-editor

./: CMakeLists.txt  README.md  dog.txt  readme.txt
Debug/: CMakeCache.txt  CurveAssignment.cbp  Makefile  cmake_install.cmake
src/: BezierCurve.cpp  BezierCurve.h  Curve.cpp  Curve.h  Freeform.cpp  Freeform.h  LagrangeCurve.cpp  LagrangeCurve.h  Object.cpp  Object.h  PolyLine.cpp  PolyLine.h  Scene.cpp  Scene.h  float2.cpp  float2.h  main.cpp
